--- a/publish-ux.css
+++ b/publish-ux.css
@@ -1,66 +1,82 @@
+/* Style by @melchoyce */
 
-.publish-ux-button-wrap {
-	min-height: 61px;
+.publish-ux-button {
+	min-height: 108px;
+}
+
+.splitbutton-wrap {
+	display: block;
+	background: #eee;
+	font-size: 1em;
+	font-family: sans-serif;
+	text-transform: uppercase;
+	border: 1px solid #ccc;
+	border-radius: 3px;
 	margin-bottom: 1em;
 }
 
-.publish-ux-button .ui-buttonset {
-	margin-right: 0;
+.splitbutton-processed {
+	display: none;
 }
 
-/* START pulling button colors out of core */
-
-.publish-ux-button .ui-button {
-	background-color: #21759b;
-	background-image: -webkit-gradient(linear, left top, left bottom, from(#2a95c5), to(#21759b));
-	background-image: -webkit-linear-gradient(top, #2a95c5, #21759b);
-	background-image:    -moz-linear-gradient(top, #2a95c5, #21759b);
-	background-image:     -ms-linear-gradient(top, #2a95c5, #21759b);
-	background-image:      -o-linear-gradient(top, #2a95c5, #21759b);
-	background-image:   linear-gradient(to bottom, #2a95c5, #21759b);
-	border-color: #21759b;
-	border-bottom-color: #1e6a8d;
-	-webkit-box-shadow: inset 0 1px 0 rgba(120,200,230,0.5);
- 	box-shadow: inset 0 1px 0 rgba(120,200,230,0.5);
- 	color: #fff;
-	text-decoration: none;
-	text-shadow: 0 1px 0 rgba(0,0,0,0.1);
+.splitbutton-button {
+	background: #eee;
+	padding: 10px 20px;
+	width: 188px;
+	width: calc( 100% - 50px - 1px - 40px );
+	color: #666;
+	display: inline-block;
+	cursor: pointer;
 }
 
-.publish-ux-button .ui-button.hover,
-.publish-ux-button .ui-button:hover,
-.publish-ux-button .ui-button.focus,
-.publish-ux-button .ui-button:focus {
-	background-color: #278ab7;
-	background-image: -webkit-gradient(linear, left top, left bottom, from(#2e9fd2), to(#21759b));
-	background-image: -webkit-linear-gradient(top, #2e9fd2, #21759b);
-	background-image:    -moz-linear-gradient(top, #2e9fd2, #21759b);
-	background-image:     -ms-linear-gradient(top, #2e9fd2, #21759b);
-	background-image:      -o-linear-gradient(top, #2e9fd2, #21759b);
-	background-image:   linear-gradient(to bottom, #2e9fd2, #21759b);
-	border-color: #1b607f;
-	-webkit-box-shadow: inset 0 1px 0 rgba(120,200,230,0.6);
- 	box-shadow: inset 0 1px 0 rgba(120,200,230,0.6);
-	color: #fff;
-	text-shadow: 0 -1px 0 rgba(0,0,0,0.3);
+.splitbutton-dropdown {
+	position: relative;
+	background: #ddd;
+	padding: 20px;
+	height: 20px;
+	width: 10px;
+	text-align: center;
+	color: #999;
+	border-left: 1px solid #ccc;
+	display: inline-block;
 }
 
-.publish-ux-button .ui-button.focus,
-.publish-ux-button .ui-button:focus {
-	border-color: #0e3950;
-	-webkit-box-shadow: inset 0 1px 0 rgba(120,200,230,0.6), 1px 1px 2px rgba(0,0,0,0.4);
-	box-shadow: inset 0 1px 0 rgba(120,200,230,0.6), 1px 1px 2px rgba(0,0,0,0.4);
-}
-
-/* END pulling button colors out of core */
-
-.publish-ux-button .ui-button .ui-button-text {
-	line-height: 2;
-	font-size: 1.5em;
-}
-
-.publish-ux-button div button:first-child {
+.splitbutton-dropdown ul {
+	display: none;
+	position: absolute;
+	top: 100%;
+	right: -1px;
+	background: #aaa;
+	border: 1px solid #999;
+	border-radius: 0 0 3px 3px;
+	color: white;
+	font-size: .8em;
+	line-height: 1.4;
+	margin: 0;
+	padding: 10px;
 	text-align: left;
-	min-width: 249px;
-	width: calc( 100% - 2.4em + 1px );
+}
+
+.splitbutton-dropdown:hover ul {
+	display: block;
+}
+
+.splitbutton-dropdown ul li {
+	list-style-type: none;
+	cursor: pointer;
+	padding: 5px 20px 5px 0;
+	border-bottom: 1px solid #999;
+}
+
+.splitbutton-dropdown ul li:first-child {
+	padding-top: 0;
+}
+
+.splitbutton-dropdown ul li:last-child {
+	border-bottom: 0;
+	padding-bottom: 0;
+}
+
+.splitbutton-dropdown ul li:hover {
+	color: #eee;
 }
