--- a/publish-ux.css
+++ b/publish-ux.css
@@ -46,6 +46,7 @@
 	position: absolute;
 	top: 100%;
 	right: -1px;
+	z-index: 10;
 	background: #aaa;
 	border: 1px solid #999;
 	border-radius: 0 0 3px 3px;
